--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,28 @@
+@import './global-reset';
+@import './modern-normolize';
+
+body {
+  background-color: rgba(47, 79, 79, 0.432);
+}
+
 .input-group {
   width: 400px;
   margin: 50px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.country-container {
+  display: flex;
+
+  border-radius: 2%;
+  overflow: hidden;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 6px 12px;
+  width: 400px;
+
+  color: rgb(9, 48, 63);
+  font-size: large;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
